# autd3-cpp

./: .gitmodules  CMakeLists.txt  Makefile.toml  README.md  ThirdPartyNotice.txt  build.py  codecov.yml
.github/workflows/: build.yml  coverage.yml  pr.yml  release.yml
examples/: CMakeLists.txt  ethercrab.cpp  nop.cpp  remote_soem.cpp  remote_twincat.cpp  runner.hpp  simulator.cpp  soem.cpp  twincat.cpp
examples/tests/: advanced.hpp  bessel.hpp  custom.hpp  flag.hpp  focus.hpp  group.hpp  holo.hpp  mod_audio_file.hpp  plane.hpp  stm.hpp  transtest.hpp  user_defined.hpp
include/: autd3.hpp
include/autd3/: def.hpp  native_methods.hpp
include/autd3/controller/: builder.hpp  controller.hpp  environment.hpp  sleeper.hpp  strategy.hpp  timer.hpp
include/autd3/driver/: autd3_device.hpp  firmware_version.hpp  link.hpp
include/autd3/driver/common/: angle.hpp  freq.hpp
include/autd3/driver/datagram/: clear.hpp  datagram.hpp  debug.hpp  force_fan.hpp  gain.hpp  group.hpp  modulation.hpp  null.hpp  output_mask.hpp  phase_corr.hpp  phase_filter.hpp  pulse_width_encoder.hpp  reads_fpga_state.hpp  segment.hpp  silencer.hpp  synchronize.hpp  tuple.hpp  with_finite_loop.hpp  with_loop_behavior.hpp  with_parallel_threshold.hpp  with_segment.hpp  with_segment_transition.hpp  with_timeout.hpp
include/autd3/driver/datagram/gain/: base.hpp  cache.hpp  gain.hpp  transform.hpp
include/autd3/driver/datagram/modulation/: base.hpp  cache.hpp  fir.hpp  modulation.hpp  radiation_pressure.hpp  transform.hpp
include/autd3/driver/datagram/stm/: control_point.hpp  foci.hpp  focus.hpp  gain.hpp  stm.hpp
include/autd3/driver/defined/: angle.hpp  freq.hpp
include/autd3/driver/ethercat/: dc_sys_time.hpp
include/autd3/driver/firmware/fpga/: drive.hpp  emit_intensity.hpp  fpga_state.hpp  loop_behavior.hpp  phase.hpp  pulse_width.hpp  sampling_config.hpp  stm_sampling_config.hpp  transition_mode.hpp
include/autd3/driver/geometry/: device.hpp  geometry.hpp  rotation.hpp  transducer.hpp
include/autd3/gain/: bessel.hpp  cache.hpp  custom.hpp  focus.hpp  gain.hpp  group.hpp  holo.hpp  null.hpp  plane.hpp  trans_test.hpp  uniform.hpp
include/autd3/gain/holo/: amplitude.hpp  backend.hpp  backend_cuda.hpp  backend_nalgebra.hpp  constraint.hpp  greedy.hpp  gs.hpp  gspat.hpp  holo.hpp  lm.hpp  naive.hpp  sdp.hpp
include/autd3/link/: audit.hpp  ethercrab.hpp  nop.hpp  remote.hpp  simulator.hpp  soem.hpp  twincat.hpp  visualizer.hpp
include/autd3/modulation/: audio_file.hpp  cache.hpp  custom.hpp  fir.hpp  fourier.hpp  mixer.hpp  modulation.hpp  radiation_pressure.hpp  resampler.hpp  sampling_mode.hpp  sine.hpp  square.hpp  static.hpp
include/autd3/modulation/audio_file/: csv.hpp  raw_pcm.hpp  wav.hpp
include/autd3/native_methods/: autd3-core.h  autd3-driver.h  autd3.h  autd3capi-backend-cuda.h  autd3capi-driver.h  autd3capi-emulator.h  autd3capi-gain-holo.h  autd3capi-link-ethercrab.h  autd3capi-link-remote.h  autd3capi-link-simulator.h  autd3capi-link-soem.h  autd3capi-link-twincat.h  autd3capi-link-visualizer.h  autd3capi-modulation-audio-file.h  autd3capi.h  def.hpp  utils.hpp
tests/: CMakeLists.txt  utils.hpp
tests/controller/: CMakeLists.txt  builder.cpp  controller.cpp  environment.cpp  sleeper.cpp  strategy.cpp  timer.cpp
tests/driver/: CMakeLists.txt  autd3_device.cpp  controller.cpp  firmware_info.cpp  firmware_version.cpp
tests/driver/common/: CMakeLists.txt  angle.cpp  emit_intensity.cpp  freq.cpp  loop_behavior.cpp  phase.cpp  sampling_config.cpp
tests/driver/datagram/: CMakeLists.txt  clear.cpp  debug.cpp  force_fan.cpp  gpio_out.cpp  group.cpp  output_mask.cpp  phase_corr.cpp  phase_filter.cpp  pulse_width_encoder.cpp  reads_fpga_state.cpp  segment.cpp  silencer.cpp  synchronize.cpp  with_parallel_threshold.cpp  with_segment.cpp  with_segment_transition.cpp  with_timeout.cpp
tests/driver/datagram/gain/: CMakeLists.txt  cache.cpp  gain.cpp  segment.cpp  transform.cpp
tests/driver/datagram/modulation/: CMakeLists.txt  cache.cpp  fir.cpp  modulation.cpp  radiation_pressure.cpp  segment.cpp  transform.cpp
tests/driver/datagram/stm/: CMakeLists.txt  foci.cpp  focus.cpp  gain.cpp
tests/driver/defined/: angle.cpp  freq.cpp
tests/driver/ethercat/: CMakeLists.txt  dc_sys_time.cpp
tests/driver/firmware/: CMakeLists.txt
tests/driver/firmware/fpga/: CMakeLists.txt  drive.cpp  emit_intensity.cpp  fpga_state.cpp  loop_behavior.cpp  phase.cpp  pulse_width.cpp  sampling_config.cpp  stm_sampling_config.cpp  transition_mode.cpp
tests/driver/geometry/: device.cpp  geometry.cpp  rotation.cpp  transducer.cpp
tests/gain/: CMakeLists.txt  bessel.cpp  cache.cpp  custom.cpp  focus.cpp  gain.cpp  group.cpp  null.cpp  plane.cpp  uniform.cpp
tests/gain/holo/: CMakeLists.txt  amp.cpp  amplitude.cpp  backend_nalgebra.cpp  constraint.cpp  greedy.cpp  gs.cpp  gspat.cpp  lm.cpp  naive.cpp  sdp.cpp
tests/link/: CMakeLists.txt  audit.cpp  ethercrab.cpp  nop.cpp  remote.cpp  simulator.cpp  soem.cpp  twincat.cpp  visualizer.cpp
tests/modulation/: CMakeLists.txt  cache.cpp  custom.cpp  fir.cpp  fourier.cpp  mixer.cpp  modulation.cpp  radiation_pressure.cpp  sine.cpp  square.cpp  static.cpp
tests/modulation/audio_file/: CMakeLists.txt  csv.cpp  raw_pcm.cpp  rawpcm.cpp  wav.cpp
tools/wrapper-generator/src/: main.rs
